kubernetes/apps/media/jellyfin/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app jellyfin
  namespace: &namespace media
  annotations:
    kustomize.toolkit.fluxcd.io/substitute: "true"
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  hostnames:
    - "jellyfin.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: *app
          port: 8096
          namespace: auth
