kubernetes/apps/media/jellyfin/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app jellyfin
  namespace: &namespace media
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authentik-outpost
          namespace: *namespace
      services:
        - name: *app
          port: 8096
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
